Update index.html - final ver

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   </header>
 
   <main class="container">
-    <section class="choose-date">
+    <section class="card choose-date">
       <h2>Choose date</h2>
       <input type="date" id="orderDate" />
       <p id="dateMessage" class="muted"></p>
     </section>
 
-    <section id="menu" >
+    <section id="menu" class="card">
       <h2>Menu</h2>
       <div id="menuList"></div>
       <p id="overallMessage" class="muted"></p>
@@ -32,7 +32,7 @@
       </div>
     </section>
 
-    <section class="order-form">
+    <section class="card order-form">
       <h2>Place your order</h2>
       <form id="orderForm">
         <label>Name<br/><input type="text" id="custName" required /></label>
@@ -45,7 +45,7 @@
       </form>
     </section>
 
-    <section class="notes">
+    <section class="card notes">
       <h3>Ordering Guidelines</h3>
       <p class="muted">
 •Orders must be placed at least 2 days in advance.
